--- a/rock-climbing.css
+++ b/rock-climbing.css
@@ -12,7 +12,7 @@ height: 300vh;
 
 /*nav bar */
 ul{
-	 list-style-type: none;
+list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -21,6 +21,7 @@ ul{
   top: 0;
   width: 100%;
 
+
 }
 
 ul >li{
@@ -28,14 +29,25 @@ ul >li{
 	float:right;
 	
 }
-li a{
+#labelNav #nav-link  {
 	display: block;
 	color: white;
 	text-align: center;
 	padding: 14px 16px;
-	padding-bottom: 0;
+	padding-bottom: 10px;
 	text-decoration: none;
 	font-size: 18px;
+}
+
+.logo{
+
+	text-align: center;
+	padding: 30px;
+
+	font-size: 25px;
+}
+#labelNav{
+	color: white;
 }
 
 
@@ -167,12 +179,18 @@ border-radius: 25px;
 #appClick:hover {
 	background-color: white;  
 }
-a:link {
-	color: black !important;
+#boxHref:link {
+	
 	text-decoration: none;
+	color: black;
 
 }
-
+#boxHref:visited {
+  color: purple;
+}
+#boxHref:active {
+  color: blue;
+}
 #appClick:active{
 	
 	background-color: white;
@@ -187,10 +205,14 @@ a:link {
 
 .contact-flex{
 display: flex;
-height: 30vh;
-justify-content: center;
-padding-top: 150px;
+ align-items: center;
+   justify-content: center;
+height: 40vh;
+flex-direction: column;
+padding-top: 0;
 }
+
+
 .backImage{
 background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("https://images.unsplash.com/photo-1523658473-41a7ca4772c8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80"); 
 background-position: center;
@@ -208,6 +230,13 @@ position: relative;
 	margin: 10px;
 
 
+
+}
+#contactUs{
+	color: white;
+	text-shadow: 2px 2px rgba(54, 54, 54, 1);
+	font-size: 5em;
+	margin: 0;
 
 }
 .rowSocialMedia > div{
