--- a/rock-climbing.css
+++ b/rock-climbing.css
@@ -6,6 +6,8 @@ height: 300vh;
 }
 .page-wrapper{
 	display:flex;
+
+ 
 }
 
 
@@ -58,10 +60,13 @@ li a:hover {
  	float: left;
  	
  }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
 	ul >li, .left
    {
   	float: none;
+  	text-align: center;
+  	
+
   }
 }
 
@@ -82,8 +87,11 @@ li a:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 50px;
+  /*font-size: 50px;*/
   text-shadow: 2px 2px rgba(54, 54, 54, 1);
+}
+#mainHeader{
+	font-size:4em;
 }
 #emailForm{
 width: 50%;
@@ -126,8 +134,18 @@ color: white;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 50px;
+  font-size: 4em;
   text-shadow: 2px 2px rgba(54, 54, 54, 1);
+}
+@media only screen and (max-width: 768px) {
+  .hero-text2{
+  	font-size: 2em;
+    position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  }
+ 
 }
 .video{
 	position: absolute;
@@ -161,7 +179,10 @@ color: white;
 
 
 }
-.box-flex > div{
+
+
+
+.box{
 border-width: 2px;
   margin: 11px;
   padding: 100px;
@@ -200,16 +221,38 @@ border-radius: 25px;
 #labelP{
 
 }
+@media only screen and (max-width: 768px){
+	.box-flex{
+		flex-direction: column;
+		justify-content: center;
+
+
+}
+	.box{
+		
+		border-width: 2px;
+	  	margin: 11px;
+	 	padding: 50px;
+		font-size: 30px;
+		text-align: center;
+		border-style: solid;
+		background-color: rgba(119,119,119,0.6);
+		border-radius: 25px;
+	}
+	}
+}
+
 
 /*social media and last section*/
 
 .contact-flex{
-display: flex;
- align-items: center;
-   justify-content: center;
-height: 40vh;
-flex-direction: column;
-padding-top: 0;
+	display: flex;
+	align-items: right;
+	justify-content: right;
+	height: 40vh;
+	flex-direction: column;
+	padding-top: 0;
+
 }
 
 
@@ -222,10 +265,15 @@ background-size: cover;
 position: relative;
 
 }
+.contactHeader{
+	text-align: center;
+}
 
-
-.rowSocialMedia{
+.rowSocialMedia {
 	display: flex;
+	align-items: center;
+	justify-content: center;
+	
 	padding: 10px;
 	margin: 10px;
 
@@ -237,6 +285,8 @@ position: relative;
 	text-shadow: 2px 2px rgba(54, 54, 54, 1);
 	font-size: 5em;
 	margin: 0;
+	align-items: center;
+	justify-content: center;
 
 }
 .rowSocialMedia > div{
@@ -247,13 +297,4 @@ position: relative;
 	 color: Tomato;
 
 }
-/*#contactUs{
-color: white;
-text-shadow: 2px 2px rgba(54, 54, 54, 1);
-font-size: 3em;
-}*/
-/*#copyright{
-	float:right;
-	padding-right: 40px;
-	font-size: 2em;
-}*/
+
